[fix] intro　letter-spacingの調整

--- a/dev/assets/styles/main.css
+++ b/dev/assets/styles/main.css
@@ -113,7 +113,7 @@ body {
   font-family: "Sawarabi Gothic", sans-serif;
   text-align: center;
   line-height: 1.8;
-  letter-spacing: 0.1em; }
+  letter-spacing: 0.05em; }
   .p-intro p + p {
     margin-top: 25px; }
 
