--- a/src/sass/flocss/object/project/intro.scss
+++ b/src/sass/flocss/object/project/intro.scss
@@ -3,7 +3,7 @@
     font-family: $font-ja;
     text-align: center;
     line-height: 1.8;
-    letter-spacing: 0.1em;
+    letter-spacing: 0.05em;
     & + p {
       margin-top: 25px;
     }
